--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -3,7 +3,8 @@
   <head>
     <title> My million webpage </title>
   </head>
-  <body>
+  <body
+	  <p> Embedded tweet: <a href="tweets.html"></a></p>
 	  <h1>Anthropology</h1><p> is a fascinating field of study that examines human societies, cultures, and their development throughout history. It encompasses various subfields, including cultural anthropology, biological anthropology, linguistic anthropology, and archaeology. By studying different aspects of human life, anthropology provides valuable insights into our shared humanity and the diversity of human experiences across the globe.</p>
 
 	  <h2>Cultural anthropology</h2> <p>focuses on understanding the customs, beliefs, social structures, and practices of different cultures. Anthropologists immerse themselves in communities, conducting fieldwork and participant observation to gain a deep understanding of how people interact, organize themselves, and make sense of the world around them. This subfield explores topics such as kinship systems, rituals, religion, language, and economic practices, shedding light on the rich tapestry of human cultural diversity.</p>
