--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -4,7 +4,13 @@
     <title> My million webpage </title>
   </head>
   <body>
-	  <a href="<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Most people don&#39;t tag their precise location in Tweets, so we&#39;re removing this ability to simplify your Tweeting experience. You&#39;ll still be able to tag your precise location in Tweets through our updated camera. It&#39;s helpful when sharing on-the-ground moments.</p>&mdash; Twitter Support (@TwitterSupport) <a href="https://twitter.com/TwitterSupport/status/1141039841993355264?ref_src=twsrc%5Etfw">June 18, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></a>
+	  <ul><li><a href="base_index.html">Homepage</a></li>
+                          <li><a href="index.html">Another unnecessary page</a></li>
+                          <li><a href="tweets.html">Sorry Another one</a></li
+                  </ul>
+
+
+	  <a href="<blockquote class=" twitter-tweet"> <p lang="en" dir="ltr">Most people don&#39;t tag their precise location in Tweets, so we&#39;re removing this ability to simplify your Tweeting experience. You&#39;ll still be able to tag your precise location in Tweets through our updated camera. It&#39;s helpful when sharing on-the-ground moments.</p>&mdash; Twitter Support (@TwitterSupport) <a href="https://twitter.com/TwitterSupport/status/1141039841993355264?ref_src=twsrc%5Etfw">June 18, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></a>
           <h1>Anthropology</h1><p> is a fascinating field of study that examines human societies, cultures, and their development throughout history. It encompasses various subfields, including cultural anthropology, biological anthropology, linguistic anthropology, and archaeology. By studying different aspects of human life, anthropology provides valuable insights into our shared humanity and the diversity of human experiences across the globe.</p>
 
           <h2>Cultural anthropology</h2> <p>focuses on understanding the customs, beliefs, social structures, and practices of different cultures. Anthropologists immerse themselves in communities, conducting fieldwork and participant observation to gain a deep understanding of how people interact, organize themselves, and make sense of the world around them. This subfield explores topics such as kinship systems, rituals, religion, language, and economic practices, shedding light on the rich tapestry of human cultural diversity.</p>
