0. Some early styling

--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title> My million webpage </title>
+      <link href="base.css" rel="stylesheet">
+      <link href="styles.css" rel="stylesheet">
+	  <title> My million webpage </title>
   </head>
   <body>
 	  <ul><li><a href="base_index.html">Homepage</a></li>
