Updating index page

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -23,6 +23,7 @@
    </a></article>
    <aside>
  <p>Linguistic anthropology delves into the study of human language, examining its structure, variation, and role in shaping societies. Language is a fundamental aspect of human culture, influencing communication, social relationships, and identity. Linguistic anthropologists investigate the ways in which languages evolve, how they are used in different social contexts, and how they reflect cultural values and beliefs. Through their research, they unravel the intricate connections between language, culture, and cognition.</p>
+		  </main>
  <textarea placeholder="Tell us what you think"></textarea></aside>
    <footer>Made by Esther Umunyana- <a href="https://github.com/eumunyana/alu-web-development/tree/main/html_basic">here</a>
    </footer>
