--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -5,7 +5,8 @@
     <link href="styles.css" rel="stylesheet">
 	  <title> My million webpage </title>
   </head>
-  <body>
+  <body class="works_on_smartphone"> 
+	  
 	  <header><ul><li><a href="base_index.html">Homepage</a></li>
 			  <li><a href="index.html">Another unnecessary page</a></li>
 			  <li><a href="tweets.html">Sorry Another one</a></li
