--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -7,7 +7,8 @@
   </head>
   <body class="works_on_smartphone"> 
 	  
-	  <header><ul><li><a href="base_index.html">Homepage</a></li>
+	  <header><ul>    <li class="logo">&#x2600;</li>
+			  <li><a href="base_index.html">Homepage</a></li>
 			  <li><a href="index.html">Another unnecessary page</a></li>
 			  <li><a href="tweets.html">Sorry Another one</a></li
 		  </ul>
