--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -50,6 +50,12 @@
 					Effective communication involves not only the transmission of messages but also the understanding of those messages by the intended recipients. It requires the use of verbal and nonverbal cues, such as words, tone of voice, body language, facial expressions, and gestures, to convey meaning and establish a shared understanding.</p>
 				</div>
 			</section>
+			<section>
+				<img src="img_girly.jpg"><div> <ul> <li> <q> Hello Babes!</q></li>
+					<li><p>Esther Umunyana</p></li>
+					<li><h4><p> I guess we are still doing this title thing</p></h4></li>
+				</div>
+			</section>
 			</main>
 	</body>
 </html>
