--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -145,7 +145,33 @@
                                         </div>
 					</div>
 					</div>
-
+			</section>
+					<section>
+						<h1>Membersss</h1>
+						<div>
+							<div>
+								<img src="Rosalia.jpeg">
+								<h2>Titlingg</h2>
+								<p>In the left sidebar of the repository settings page, click on "Manage access." This will display a list of current collaborators.</p>
+							</div>
+							<div>
+                                                                <img src="Rosalia.jpeg">
+                                                                <h2>Titlingg</h2>
+                                                                <p>In the left sidebar of the repository settings page, click on "Manage access." This will display a list of current collaborators.</p>
+                                                        </div>
+							<div>
+                                                                <img src="Rosalia.jpeg">
+                                                                <h2>Titlingg</h2>
+                                                                <p>In the left sidebar of the repository settings page, click on "Manage access." This will display a list of current collaborators.</p>
+                                                        </div>
+							<div>
+                                                                <img src="Rosalia.jpeg">
+                                                                <h2>Titlingg</h2>
+                                                                <p>In the left sidebar of the repository settings page, click on "Manage access." This will display a list of current collaborators.</p>
+                                                        </div>
+						</div>
+						<input type="button" value= "button">
+					</section>
 			</main>
 	</body>
 </html>
