--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -172,6 +172,19 @@
 						</div>
 						<input type="button" value= "button">
 					</section>
+					<section>
+						<div>
+							<h1>Title</h1>
+							<div>
+								<h2>Second title</h2>
+								<p>Navigate to the repository in question by searching for the repository name or accessing it through a direct link.</P>.
+							</div>
+							<div>
+                                                                <h2>Second title</h2>
+							<p>Navigate to the repository in question by searching for the repository name or accessing it through a direct link.</p>
+							</div>
+						</div>
+					</section>
 			</main>
 	</body>
 </html>
