--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -186,5 +186,18 @@
 						</div>
 					</section>
 			</main>
+			<footer>
+				<div>
+					<div class="logo">
+						<img src="Rosalia.jpeg">
+						<div>
+						<a href="https://chat.openai.com/">Link</a>
+						<img src="Rosalia.jpeg">
+						</div>
+						<div>
+							<p>Made by Esther Umunyana</p>
+						</div>
+					</div>
+					</footer>
 	</body>
 </html>
